<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1.0" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.16"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/travelNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/travelDescrTravelNameTV" />

        <EditText
            android:id="@+id/travelNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/travelDescrTravelNameTV" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.74"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/travelDescriptionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/travelDescrTravelDescrTV" />

        <EditText
            android:id="@+id/travelDescriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="@string/travelDescrTravelDescrTV" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.11"
        android:orientation="vertical" >

        <Button
            android:id="@+id/travelStartButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="showTravelMapActivity"
            android:text="@string/travelDescrTravelStartBtn" />
    </LinearLayout>

</LinearLayout>